--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="user">
             <img src="image/andre.png" alt="">
-            <h3>André Miranda Pontes</h3>
+            <h3>Melissa Fagundes de Melo Ricci</h3>
             <p>Audiovisual e Ilustrador</p>
         </div>
 
@@ -45,7 +45,7 @@
     <section class="home" id="home">
 
         <div class="content">
-            <h3>Matheus Akira Mimura</h3>
+            <h3>Melissa F. de M. Ricci</h3>
             <p>Estudante em Cinema e Audiovisual </p>
             <a href="https://drive.google.com/file/d/1LRlEdbcXeWfg-ZR5v0IvBwAzR8hgbdIv/view?usp=sharing" class="btn">Download do Currículo</a>
         </div>
