--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio André Miranda Pontes</title>
+    <title>portfolio Melissa Fagundes Melo Ricci</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -22,9 +22,9 @@
     <header class="header">
 
         <div class="user">
-            <img src="image/andre.png" alt="">
-            <h3>Melissa Fagundes de Melo Ricci</h3>
-            <p>Audiovisual e Ilustrador</p>
+            <img src="img/melissa.png" alt="">
+            <h3>Melissa Fagundes Melo Ricci</h3>
+            <p>Desenvolvedora Front-End</p>
         </div>
 
         <nav class="navbar">
@@ -45,8 +45,8 @@
     <section class="home" id="home">
 
         <div class="content">
-            <h3>Melissa F. de M. Ricci</h3>
-            <p>Estudante em Cinema e Audiovisual </p>
+            <h3>Melissa F. M. Ricci</h3>
+            <p>Desenvolvedora Front-End </p>
             <a href="https://drive.google.com/file/d/1LRlEdbcXeWfg-ZR5v0IvBwAzR8hgbdIv/view?usp=sharing" class="btn">Download do Currículo</a>
         </div>
 
@@ -70,39 +70,39 @@
         <div class="box-container">
 
             <div class="box">
-                <i class="fas fa-video"></i>
-                <h3> Edição de Vídeo</h3>
-                <p>Nível avançado em Premiere e After Efects, nível intermedário em DaVinci Resolve e conhecimento teórico em montagem cinematográfica.</p>
+                <i class="fab fa-html5"></i> 
+                <h3> HTML</h3>
+                <p>Nível intermedário na linguagem de marcação HTML 5.</p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-css3-alt"></i> 
+                <h3>CSS3</h3>
+                <p>Nível intermedário na linguagem de design gráfico CSS3.</p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-js-square"></i> 
+                <h3>JavaScript</h3>
+                <p>Nível intermedário na linguagem de progamação JavaScript.</p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-git-square"></i> 
+                <h3>GIT</h3>
+                <p> Nível básico no sistema de controle de versões distribuído GIT.</p>
             </div>
 
             <div class="box">
                 <i class="fas fa-paint-brush"></i> 
                 <h3>Design Gráfico</h3>
-                <p>Nível avançado em Photoshop e Ilustrator, nível intermedário em Indesign e nível básico no Animate.</p>
+                <p>Nível intermedário em Photoshop</p>
             </div>
 
             <div class="box">
-                <i class="fas fa-dragon"></i> 
-                <h3>Ilustração</h3>
-                <p>Designer de personagem com conhecimento teórico em gestual, estilização e perspectiva.</p>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-headphones-alt"></i> 
-                <h3>Mixagem de Áudio</h3>
-                <p>Conhecimento intermedário em mixagem e produção sonora para música, vídeos e filmes. Utilizo Adobe Audition e Ableton Live.</p>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-copy"></i> 
-                <h3>Roteiro</h3>
-                <p> Conhecimento teórico de formatação de roteiro e suas estruturas narrativas.</p>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-camera"></i>
-                <h3>Direção de fotografia</h3>
-                <p>Experiência em camêras de vídeo profissional .</p>
+                <i class="fas fa-globe"></i> 
+                <h3>Inglês</h3>
+                <p>Nível básico em Inglês.</p>
             </div>
 
         </div>
@@ -120,74 +120,28 @@
         <div class="box-container">
 
             <div class="box">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Os2442ttBbg"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <img src="img/capa_1.png">
+                <div class="content">
+                    <h3>Projeto Hospital</h3>
+                    <a href="https://matheusakiramimura.com/logado_paciente/agenda.php" class="btn" >Saiba Mais</a>
+                </div> 
             </div>
 
             <div class="box">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Os2442ttBbg"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <img src="img/carrinho.png" s>
+                <div class="content">
+                    <h3>Projeto Carrinho de Compra</h3>
+                    <a href="https://matheusakiramimura.github.io/JavaScript/carrinho/" class="btn" >Saiba Mais</a>
+                </div> 
             </div>
-
-            <div class="box">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Os2442ttBbg"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-
-            <div class="box">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Os2442ttBbg"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-
-            <div class="box">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Os2442ttBbg"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-
-            <div class="box">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Os2442ttBbg"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-
+            
         </div>
 
     </section>
 
     <!-- portfolio section ends -->
 
-    <!-- contact section starts -->
-
-    <section class="contact" id="contato">
-
-        <h1 class="heading"> Entrar em <span>Contato</span> </h1>
-
-        <form action="">
-            <input type="text" placeholder="Seu nome" class="box">
-            <input type="email" placeholder="Seu e-mail" class="box">
-            <input type="text" placeholder="Assunto" class="box">
-            <textarea name="" class="box" placeholder="Sua mensagem" id="" cols="30" rows="10"></textarea>
-
-            <div style="text-align: center;">
-                <input type="submit" value="Enviar Mensagem" class="btn" >
-            </div>
-            
-        </form>
-
-    </section>
-
-    <p class="credits">Desenvolvido Por <span class="credits">Matheus Akira Mimura</span> 2021</p>
+    <p class="credits">Desenvolvido Por <span class="credits">Melissa Fagundes Melo Ricci</span> 2021</p>
 
 
 
